--- a/01/comment.html
+++ b/01/comment.html
@@ -13,6 +13,7 @@
 
         console.log(10+20);     // 30은 콘솔에 출력
         // console.log(100);    // 100은 출력되지 않음
+        // 한 줄의 설명글을 달기위해 사용됩니다.
     </script>
 </body>
 </html>
