--- a/02/unicode.html
+++ b/02/unicode.html
@@ -12,6 +12,10 @@
 
         document.write(text1 + "<br>");
         document.write(text2);
+
+        // 결과
+        // Hello💗
+        // Hello 🌐 🌐
     </script>
 </body>
 </html>
