--- a/02/null.html
+++ b/02/null.html
@@ -15,6 +15,9 @@
         // 결과
         // 값 :
         // 데이터 형 : string
+
+        // 변수 x는 빈 문자열인 "" 값을 가집니다. ""을 컴퓨터에서는 널(Null)이라고 부릅니다.
+        // Null은 빈 문자열을 의미하기 때문에 일종의 문자열(string)이라고 볼 수 있습니다.
     </script>
 </body>
 </html>
