--- a/02/undefined.html
+++ b/02/undefined.html
@@ -15,6 +15,8 @@
         // 결과
         // undefined
         // undefined
+
+        // 변수 x가 초기값을 가지지 않기 때문에 x는 undefined값을 가집니다.
     </script>
 </body>
 </html>
