--- a/02/assign.html
+++ b/02/assign.html
@@ -6,6 +6,22 @@
     <title>할당 연산자 사용 예</title>
 </head>
 <body>
-    
+    <script>
+        let a = 10, b = 20, c = 30, d = 40, e = 50;
+        let f = "안녕";
+
+        a += 3;             // 13      
+        b -= 8;             // 12             
+        c *= 2;             // 60
+        d /= 10;            // 4        
+        e %= 6;             // 2
+        f += "하세요.";     // 안녕하세요.
+        
+        document.write(a + "<br>");
+        document.write(b + "<br>");
+        document.write(c + "<br>");
+        document.write(d + "<br>");
+        document.write(f + "<br>");
+    </script>
 </body>
 </html>
