--- a/03/for_color.html
+++ b/03/for_color.html
@@ -10,7 +10,7 @@
         const color = ["red", "green", "blue", "pink"]
         let text = ""
 
-        for(i=0; i<=3; i++){
+        for(let i=0; i<=3; i++){
             text += `<span style='color:${color[i]}'>안녕</span><br>`;
         }
         document.write(text);
