--- a/03/for_sum.html
+++ b/03/for_sum.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         let sum = 0;
-        for(i=1; i<=10; i++){
+        for(let i=1; i<=10; i++){
             sum += i;   // sum = sum + i 와 동일
         }
         document.write("합계:" + sum);
