--- a/03/for_sum_even.html
+++ b/03/for_sum_even.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         let sum = 0;
-        for(i=1; i<=100; i++){
+        for(let i=1; i<=100; i++){
             if(i%2 == 0){
                 sum += i;    // sum = sum + i 와 동일
             }
