--- a/09/array_splice.html
+++ b/09/array_splice.html
@@ -33,10 +33,11 @@
 
       // 사자,토끼,호랑이,개구리,앵무새
       // -반환값:
-      // 배열의 인덱스 1인 요소 '호랑이'부터 0개의 요소를 삭제한다.
+      // 배열의 인덱스 1인 요소 '호랑이'부터 0개의 요소를 삭제한다. 이것은 요소를 삭제하지 않는다는 의미.
 
       // 사자,토끼,호랑이,앵무새
       // -반환값: 개구리
+      // splice() 메서드를 이용하면 배열에 요소에 추가함과 동시에 요소를 삭제할 수 있다.
     </script>
   </body>
 </html>
